--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -3,6 +3,6 @@
 <% @doctors.each do |doctor| %>
   <li>
     <%=link_to doctor.name, doctor_path(doctor) %>
-    <%=pluralize(doctor.patient.count, "patient") %>
+    <%=pluralize(doctor.count, "patient") %>
   </li>
 </ul>
