--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,6 +1,6 @@
 <h3> Doctor's Appointments </h3>
 <ul>
-<% @doctor.appointments.appointment_datetime.each do |app_time| %> 
+<% @doctor.appointment.appointment_datetime.each do |app_time| %> 
 <li><%= app_time %></li>
 <% end %>
 </ul>
