--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,6 +1,7 @@
 
 <ul>
 <% @doctor.appointments.each do |app| %>
-<li><%= link_to app.human_time, patient_path(app.patient.name)%></li>
+<li><%= app.human_time%></li>
+<li><%= link_to app.patient.name, patient_path(app.patient.name) %></li>
 <% end %>
 </ul>
