--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,8 +1,8 @@
 <h1> Doctors </h1>
 <ul>
 <% @doctors.each do |doctor| %>
-  <li>
-    <%=link_to doctor.name, doctor_path(doctor) %>
-    <%=pluralize(doctor.count, "patient") %>
-  </li>
+  <li><%= link_to doctor.name, doctor_path(doctor)%>
+       Number of Patients: <%= doctor.patients.count %>
+   </li>
+   <%end%> 
 </ul>
