--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -3,6 +3,8 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
 
+  <%= f.label :department %> 
+  <%= f.text_field :department %> 
+
   <%=f.submit %>
   <%end%>
-  
