--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,8 +1,8 @@
 <h3> All Patients </h3>
 <ul>
   <% @patients.each do |patient| %>
-  <li><%= patient.name %>
-  number of appointments: <%=patient.appointments.count %>
+  <li>Name: <%= patient.name %>
+  Number of Appointments: <%=patient.appointments.count %>
 </li>
 <% end %>
 </ul> 
