--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -2,6 +2,6 @@
 <ul>
 <% @doctor.appointments.each do |app| %>
 <li><%= app.human_time%></li>
-<li><%= link_to app.patient.name, patient_path(app.patient.name) %></li>
+<li><%= link_to app.patient.name, patient_path(app.patient) %></li>
 <% end %>
 </ul>
