--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,5 +1,5 @@
 <ul>
-<% appointment.doctor.each do |doctor| %>
+<% @appointment.doctor.each do |doctor| %>
 Appt doctor: <li><%= link_to doctor.name, doctor_path(doctor)%></li>
 <% end %>
 
