--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,6 +1,5 @@
 <ul>
-<% @appointment.doctor.each do |doctor| %>
-Appt doctor: <li><%= link_to doctor.name, doctor_path(doctor)%></li>
+<%= link_to @appointment.doctor.name, doctor_path(@appointment.doctor)%></li>
 <% end %>
 
 
