automatically backed up by learn

--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,2 +1,4 @@
 
-<%= link_to @appointment.doctor.name, doctor_path(@appointment.doctor)%></li>
+<%= link_to @appointment.doctor.name, doctor_path(@appointment.doctor)%>
+<%= link_to @appointment.patient.name, patient_path(@appointment.patient)%>
+
